#7060 - Hero: align hero slider (v7) vertically at 50%, nudged up 50px to avoid the dots

--- a/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
@@ -206,7 +206,9 @@
             position: absolute;
             left: 0;
             right: 0;
-            bottom: 40%;
+            // bottom: 40%;
+            bottom: 50%;
+            transform: translateY(calc(~"50% - 50px"));
             z-index: 999;
             .name, .text, .site{
                 display: none !important;
